# ProofChain

./: .gitignore  AI_ATTRIBUTION.md  BLOCKCHAIN_VERIFICATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SUBMISSION_CHECKLIST.md  HACKATHON_COMPLIANCE.md  HACKATHON_COMPLIANCE_FINAL.md  HACKATHON_README.md  HACKATHON_SUCCESS_FINAL.md  HACKATHON_SUCCESS_SUMMARY.md  README.md  README_HACKATHON.md  README_ORIGINAL.md  SMART_CONTRACT_EXPLANATION.md  VIDEO_SCRIPTS.md  demo_helper.sh  setup.sh  start-dev.sh
proofchain-algokit/: .algokit.toml  DEPLOYMENT_GUIDE.md  HACKATHON_SUBMISSION.md  README.md  demo.sh  deploy_now.sh  deployment_info.json  hackathon_demo.sh  pyproject.toml  requirements.txt  sample_testnet_deployment.json  setup.sh  verify_compliance.py
proofchain-algokit/artifacts/: ProofChain.approval.teal  ProofChain.arc32.json
proofchain-algokit/scripts/: demo_contract.py  deploy_localnet.py  deploy_testnet.py  simple_deploy.py  test_contract.py  update_frontend.py
proofchain-algokit/smart_contracts/: __init__.py  __main__.py  proofchain_contract.py
proofchain-frontend/: index.html  package-lock.json  package.json
proofchain-frontend/src/: App.css  App.jsx  polyfills.js
proofchain-frontend/src/components/: ReportForm.jsx  WalletButton.jsx
proofchain-frontend/src/lib/: algorand.js  wallet.js
screenshots/: README.md
trustchain-backend/: .env  .env.example  README.md  package-lock.json  package.json
trustchain-backend/data/: trustchain.db
trustchain-backend/src/: server.js
trustchain-backend/src/database/: init.js
trustchain-backend/src/routes/: analytics.js  reports.js
trustchain-frontend/: index.html  package-lock.json  package.json
trustchain-frontend/public/: test.html
trustchain-frontend/src/: App.jsx  index.css  main.jsx
trustchain-smart-contract/: .algokit.toml  DEPLOYMENT_GUIDE.md  SMART_CONTRACT_DOCUMENTATION.md  approval.teal  deploy.py  report_contract.py  requirements.txt  test_contract.py  update_frontend.py
trustchain-witness-main/: .env  README.md
trustchain-witness-main/src/: index.css  polyfills.ts  vite-env.d.ts
trustchain_v2/: README.md  app.py  call_submit.py  deploy.py  package-lock.json  package.json  setup_trustchain.py
trustchain_v2/trustchain-witness-main/: IPFS_SETUP.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+20 files in other folders)
